--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>og_imgur</title>
+    <meta property="og:title" content="Hello" />
+    <meta property="og:type" content="image" />
+    <meta property="og:url" content="https://ogimgur.herokuapp.com/" />
+    <meta property="og:image" content="https://ogimgur.herokuapp.com/troll.png" />
   </head>
   <body>
     <div data-imagery-processor="card" data-imagery-hmac="1234567">
