--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <title>og_imgur</title>
     <meta property="og:title" content="Hello" />
-    <meta property="og:type" content="image" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ogimgur.herokuapp.com/" />
     <meta property="og:image" content="https://ogimgur.herokuapp.com/troll.png" />
   </head>
