--- a/views/index.erb
+++ b/views/index.erb
@@ -2,10 +2,15 @@
   <head>
     <meta charset="utf-8">
     <title>og_imgur</title>
+
+
     <meta property="og:title" content="Hello" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ogimgur.herokuapp.com/" />
     <meta property="og:image" content="https://ogimgur.herokuapp.com/troll.png" />
+    <meta property="og:description" content="You got a kitten!">
+    <meta property="fb:app_id" content="958071430961441">
+
   </head>
   <body>
     <div data-imagery-processor="card" data-imagery-hmac="1234567">
