--- a/views/index.erb
+++ b/views/index.erb
@@ -5,9 +5,9 @@
 
     <meta property="og:title" content="Fake OSP">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="/">
-    <meta property="og:image" content="/troll.png">
-    <meta property="og:description" content="You got a kitten!">
+    <meta property="og:url" content="https://ogimgur.herokuapp.com/og.html">
+    <meta property="og:image" content="https://ogimgur.herokuapp.com/troll.png">
+    <meta property="og:description" content="yolo">
     <meta property="fb:app_id" content="958071430961441">
   </head>
   <body>
