--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>og_imgur</title>
 
-    <meta property="og:title" content="Fake OSP">
+    <meta property="og:title" content="yolo">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ogimgur.herokuapp.com/og.html">
     <meta property="og:image" content="https://ogimgur.herokuapp.com/troll.png">
